# 3d-change-detection

./: .env.example  .gitignore  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: main.py  schemas.py  worker.py  worker_tasks.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: jobs.py  projects.py
backend/app/core/: config.py
backend/app/db/: init_db.py  models.py
backend/app/processing/: __init__.py  clustering.py  copc.py  exceptions.py  m3c2.py  paths.py  pdal.py  pipeline.py  publishing.py  registration.py  storage_keys.py  tiling.py  validation.py
backend/app/services/: events.py  jobs.py  projects.py  storage.py
docs/: 요구사항분석서.md
frontend/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  config.ts  main.tsx  styles.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: InspectorPanel.tsx  MonitorPanel.tsx  ProjectPanel.tsx  SetupPanel.tsx  TopBar.tsx  ViewerPanel.tsx
frontend/src/hooks/: useJobEvents.ts
frontend/src/store/: appStore.ts
frontend/src/utils/: geo.ts
